[package]
name = "simple-proxy"
version = "0.1.0"
authors = ["Sergey Mishin <sergei.a.mishin@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "0.12"

clap = "2.21"
structopt = "0.2.14"

log = "0.4.4"
slog = "2.3.3"
slog-term = "2.4.0"
slog-scope = "4.0.1"
slog-stdlog = "3.0.2"
slog-async = "2.3.0"
slog-envlogger = "2.1.0"

hyper-tls = "0.3.2"
